# bfforever-rs

./: Cargo.toml  README.md
.github/actions/: ci.yml
.github/workflows/: ci.yml
bfforever/: Cargo.toml
bfforever/src/: lib.rs
bfforever/src/audio/: celt.rs  mod.rs
bfforever/src/audio/celt/: crypt.rs  decode.rs  io.rs  mod.rs
bfforever/src/audio/wav/: encode.rs  mod.rs
bfforever/src/io/: file.rs  mod.rs  zobject.rs
bfforever/src/riff/: errors.rs  io.rs  mod.rs  zobject.rs
bfforever/src/texture/: dxt.rs  mod.rs  xpr.rs
bfforever/src/texture/xpr/: io.rs  mod.rs
bfforever/src/zobject/: mod.rs  song.rs
bfforever_derive/: Cargo.toml
bfforever_derive/src/: lib.rs
songfuse/: Cargo.toml
songfuse/src/: main.rs
songfuse/src/apps/: audio.rs  audio_decrypt.rs  mod.rs  texture.rs
