[workspace]
members = [
    "bfforever",
    "songfuse"
]

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.3.10", features = ["derive"] }
log = "0.4.19"
thiserror = "1.0.40"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true
