[workspace]
members = [
    "bfforever",
    "songfuse"
]

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
thiserror = "1.0.50"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'  # Optimize for size
strip = true
