[package]
name = "bfforever"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aes = "0.8.1"
audiopus = "0.2.0"
cipher = { version = "0.4.3", features = [ "block-padding" ] }
log = { workspace = true }
nom = "7.1.1"
rayon = "1.5.3"
thiserror = { workspace = true }
wav = "1.0.0"
