[package]
name = "bfforever"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aes = "0.8.2"
audiopus = "0.2.0"
cipher = { version = "0.4.4", features = [ "block-padding" ] }
log = { workspace = true }
nom = "7.1.3"
rayon = "1.7.0"
thiserror = { workspace = true }
wav = "1.0.0"
