[package]
name = "bfforever"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aes = "0.8.3"
audiopus = "0.2.0"
bfforever_derive = { path = "../bfforever_derive" }
cipher = { version = "0.4.4", features = [ "block-padding" ] }
image = { version = "0.24.8", default-features = false, features = [ "dxt", "png" ] }
log = { workspace = true }
nom = "7.1.3"
rayon = "1.8.1"
thiserror = { workspace = true }
wav = "1.0.0"
